[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "novamart-customer-service"
version = "1.0.0"
description = "OpenEnv customer service constraint negotiation environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "httpx",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"